@@ -2,9 +2,9 @@ Package: momentuHMM
 Type: Package
 Title: Maximum Likelihood Analysis of Animal Movement Behavior Using Multivariate Hidden Markov Models
 Version: 1.2.1
-Date: 2017-10-30
+Date: 2017-11-01
 Depends:
-    R (>= 2.10), splines, splines2
+    R (>= 2.10)
 Author: Brett McClintock, Theo Michelot
 Maintainer: Brett McClintock <brett.mcclintock@noaa.gov>
 Description: Extended tools for analyzing telemetry data using generalized hidden Markov models. These include data pre-processing and visualization, fitting HMMs to location and auxiliary biotelemetry or environmental data, biased and correlated random walk movement models, multiple imputation for incorporating location measurement error and missing data, user-specified design matrices and constraints for covariate modelling of parameters, decoding of the state process, visualization of fitted models, model checking and selection, and simulation. See McClintock and Michelot (2017) <arXiv:1710.03786>.
@@ -40,7 +40,9 @@ LinkingTo: Rcpp, RcppArmadillo
 Suggests:
     testthat,
     setRNG,
-    knitr
+    knitr,
+    splines, 
+    splines2
 RoxygenNote: 6.0.1
 NeedsCompilation: yes
 VignetteBuilder: knitr
