@@ -104,12 +104,6 @@ importFrom(sp,coordinates)
 importFrom(sp,gridded)
 importFrom(sp,spDistsN1)
 importFrom(sp,spplot)
-importFrom(splines,bs)
-importFrom(splines,ns)
-importFrom(splines2,bSpline)
-importFrom(splines2,cSpline)
-importFrom(splines2,iSpline)
-importFrom(splines2,mSpline)
 importFrom(stats,acf)
 importFrom(stats,as.formula)
 importFrom(stats,formula)
